--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.11)
 
 if(WIN32)
-  set(CMAKE_TOOLCHAIN_FILE
-      $ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake
+  set(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake
       CACHE STRING "")
   set(VCPKG_TARGET_TRIPLET $ENV{VCPKG_DEFAULT_TRIPLET} CACHE STRING "")
 endif()
@@ -80,8 +79,7 @@ if(MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /w44986")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /w44987")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /w44988")
-elseif(CMAKE_COMPILER_IS_GNUCC
-       OR CMAKE_COMPILER_IS_GNUCXX
+elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX
        OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -fsigned-char -Wshadow")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra -Wpedantic -Wcast-qual")
@@ -90,8 +88,8 @@ endif()
 
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
   set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
-  set_property(CACHE CMAKE_BUILD_TYPE
-               PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
+  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release"
+                                               "MinSizeRel" "RelWithDebInfo")
 endif()
 
 set(CLANG_TIDY_EXECUTABLE "clang-tidy" CACHE STRING "clang-tidy")
@@ -117,13 +115,13 @@ else()
 endif()
 
 if(NOT TARGET uninstall)
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in
-                 ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake IMMEDIATE
-                 @ONLY)
+  configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in
+    ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake IMMEDIATE @ONLY)
 
-  add_custom_target(uninstall
-                    COMMAND ${CMAKE_COMMAND} -P
-                            ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
+  add_custom_target(
+    uninstall COMMAND ${CMAKE_COMMAND} -P
+                      ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
 endif()
 
 if(${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR})
@@ -147,19 +145,18 @@ endif()
 install(FILES ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
         DESTINATION lib/cmake/${CMAKE_PROJECT_NAME})
 
-install(EXPORT ${CMAKE_PROJECT_NAME}Targets
-        NAMESPACE hvr::
+install(EXPORT ${CMAKE_PROJECT_NAME}Targets NAMESPACE hvr::
         DESTINATION lib/cmake/${CMAKE_PROJECT_NAME})
 
 if(NOT TARGET install-app)
-  add_custom_target(install-app
-                    COMMAND "${CMAKE_COMMAND}"
-                            -DCMAKE_INSTALL_COMPONENT=install-app -P
-                            "${CMAKE_BINARY_DIR}/cmake_install.cmake")
+  add_custom_target(
+    install-app
+    COMMAND "${CMAKE_COMMAND}" -DCMAKE_INSTALL_COMPONENT=install-app -P
+            "${CMAKE_BINARY_DIR}/cmake_install.cmake")
 endif()
 
-file(GLOB_RECURSE SRC_FILES modules/*.cpp modules/*.h modules/*.cu modules/*.cuh
-     apps/*.cpp apps/*.h unit-test/*cpp unit-test/*.h)
+file(GLOB_RECURSE SRC_FILES modules/*.cpp modules/*.h modules/*.cu
+     modules/*.cuh apps/*.cpp apps/*.h unit-test/*cpp unit-test/*.h)
 file(GLOB_RECURSE CMAKE_FILES modules/*CMakeLists.txt apps/*CMakeLists.txt
      unit-test/*CMakeLists.txt)
 list(APPEND CMAKE_FILES ${CMAKE_SOURCE_DIR}/CMakeLists.txt)
@@ -167,7 +164,7 @@ list(APPEND CMAKE_FILES ${CMAKE_SOURCE_DIR}/CMakeLists.txt)
 set(CLANG_FORMAT_EXECUTABLE "clang-format" CACHE STRING "clang-format")
 set(CMAKE_FORMAT_EXECUTABLE "cmake-format" CACHE STRING "cmake-format")
 
-add_custom_target(format
-                  COMMAND ${CLANG_FORMAT_EXECUTABLE} -i ${SRC_FILES}
-                  COMMAND ${CMAKE_FORMAT_EXECUTABLE} --max-subargs-per-line 10
-                          -i ${CMAKE_FILES})
+add_custom_target(
+  format COMMAND ${CLANG_FORMAT_EXECUTABLE} -i ${SRC_FILES}
+  COMMAND ${CMAKE_FORMAT_EXECUTABLE} --max-pargs-hwrap 10 --max-subgroups-hwrap
+          10 -i ${CMAKE_FILES})
